# distribution

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
database/: db.sql  gpt-design.sql
src/: api.rs  main.rs  models.rs  utils.rs
src/api/: auth.rs  brand.rs  category.rs  discount.rs  image.rs  order.rs  product.rs  product_price.rs  shop.rs  township.rs  user.rs  ward.rs
src/models/: brand.rs  category.rs  discount.rs  order.rs  product.rs  product_price.rs  shop.rs  township.rs  user.rs  ward.rs
src/utils/: jwt.rs
